almost finished with intro Karmayoga

--- a/bindu.bib
+++ b/bindu.bib
@@ -1958,7 +1958,8 @@ address={Delhi},
 
 
 @article{mallinson2012sataka,
-  title={The Original Gorakṣaśataka},
+  title={Gorakṣaśataka},
+  subtitle={The Original Gorakṣaśataka},
   author= {Mallinson, James},
   year= {2012},
   journal= {Yoga in Practice},
