--- a/intro.tex
+++ b/intro.tex
@@ -607,11 +607,11 @@ This \textit{kevalakumbhaka} is achieved in a lengthy process with gradually mor
 
 The yogin who masters \textit{kevalakumbhaka} can hold his breath for any length of time.\footnote{Cf. \citetitle{hathapradipika2024} 2.76.} Nārāyaṇatīrtha then quotes seven of the eight \textit{kumbhaka}s\footnote{\citetitle{yogacandrika} 2.51, ed. p. 118-121. The seven \textit{kumbhaka}s mentioned by Nārāyaṇatīrtha are: 1. \textit{sūryabhedana}; 2. \textit{ujjāyī}; 3. \textit{sītkā(ra)}; 4. \textit{śītalī}; 5. \textit{brahmarī}; 6.\textit{mūrchā}; and 7. \textit{bhastrikā}.} of \citetitle{hathapradipika2024} (except \textit{plāvanī}, cf. \citetitle{hathapradipika2024} 2.71).\footnote{Cf. \citetitle{hathapradipika2024} 2.48-71.} Then the other seven \textit{kumbhaka}s already mentioned in the commentary to 1.54 are explained in more detail.\footnote{\textit{Yogasiddhāntacandrikā} 2.51, p. 121: \textit{kumbhaḥ saptavidho jñeyo recitādiprabhedataḥ} | \textit{recitaṃ pūratiḥ śāntaḥ pratyāhārottaro'dharaḥ} || \textit{samaśceti vinirdiṣṭaḥ kumbhakaḥ saptabhedataḥ} \textit{iti eteṣāṃ lakṣaṇāni cāha-} \textit{recitasya bahistambho vāyo recitakumbhakaḥ} \\textit{pūrakeṇa vinā samyag yogo 'yaṃ sukhado nṛṇām} || 1 || \textit{pūritasyodare rodhaḥ paścādrecakasaṃyutaḥ} | \textit{nāḍīśuddhikaraḥ samyak proktaḥ pūritakumbhakaḥ} || 2 || \textit{kāyasyāntarbahir vyāptir yā sa syāc chāntakumbhakaḥ} || 3 || \textit{sthānayorantare rodhaḥ pratyāhārākhyakumbhakaḥ} || 4 || \textit{āpūrayet kramādūrdhvam ūrdhvarodho hṛdādiṣu} || 5 || \textit{uttaraḥ kumbhakaḥ sa syādadho 'dho mūrddhato 'dharaḥ} || 6 || \textit{recanāpūraṇe tyaktvā manasā maruto dhṛtiḥ} | \textit{yā nābhyādpradeśeṣu samaḥ kumbhaḥ prakīrttitaḥ} || 7 ||} The commentary to 2.50 then quotes further explanations from various texts, such as \textit{Yogabhāskara}, \textit{Nandipurāṇa} and \textit{Mārkaṇḍeyapurāṇa} on the subject of \textit{prāṇāyāma}. In addition, the four stages (\textit{avasthā}) of yoga practice - \textit{ārambha}, \textit{ghāṭa}, \textit{paricaya} and \textit{niṣpatti} are introduced,\footnote{See \citetitle{asiddhi} \textit{viveka} 19,21,29 and 31 for the oldest account of the four stages. Also cf. \citetitle{hathapradipika2024} 4.16-25.} etc.\footnote{For example, the yogic dietary guidelines and the dwelling of the yogi based on the explanations of the first chapter of \citetitle{hathapradipika2024}.}
 
-The Haṭhayoga of Nārāyaṇatīrtha thus consists primarily of two of the four main classical categories of Haṭhayoga according to the \citetitle{hathapradipika2024}\footnote{Cf. \citetitle{hathapradipika2024} 1.56.} - \textit{āsana} and \textit{kumbhaka}, which are located in Pātañjalayoga. The third main category of Haṭhayoga after the \citetitle{hathapradipika2024}, namely \textit{mudrā}, is also found in the \textit{Yogasiddhāntacandrikā}. However, surprisingly, the \textit{mudrā}s, together with the \textit{ṣatkarma}s, are only taught in the context of Karmayoga. Surprisingly, because \textit{mudrā} and \textit{ṣaṭkarma} are the elements of Haṭhayoga that form the main distinguishing feature from other Yoga systems. These will, therefore, only be dealt with in the corresponding sub-chapter of this work. However, the fourth main category of the \citetitle{hathapradipika2024}, \textit{nādānusandhāna}, is not found in the \textit{Yogasiddhāntacandrikā}.
+The Haṭhayoga of Nārāyaṇatīrtha thus consists primarily of two of the four main classical categories of Haṭhayoga according to the \citetitle{hathapradipika2024}\footnote{Cf. \citetitle{hathapradipika2024} 1.56.} - \textit{āsana} and \textit{kumbhaka}, which are located in Pātañjalayoga. The third main category of Haṭhayoga after the \citetitle{hathapradipika2024}, namely \textit{mudrā}, is also found in the \textit{Yogasiddhāntacandrikā}. However, surprisingly, the \textit{mudrā}s, together with the \textit{ṣatkarma}s, are only taught in the context of Karmayoga. Surprisingly, because \textit{mudrā} and \textit{ṣaṭkarma} are the elements of Haṭhayoga that form the main distinguishing feature from other Yoga systems. Nārāyaṇatīrtha is not unaware of this. At the end of his section on Karmayoga, he mentions them belonging to Haṭhayoga, but nonetheless decides to present them in the contect of Karmayoga. These will, therefore, only be dealt with in the corresponding sub-chapter of this work. The fourth main category of the \citetitle{hathapradipika2024}, \textit{nādānusandhāna}, is not found in the \textit{Yogasiddhāntacandrikā}.
 
 \subsection{Haṭhayoga in the \textit{Sarvāṅgayogapradīpikā}}
 
-In the \textit{Sarvāṅgayogapradīpikā} (3.1-52), Haṭhayoga is both an individual category (3.1-12) and a superordinate category. In the following, Haṭhayoga is primarily discussed as a single category. As a super-category, it subsumes three other yogas, namely Rājayoga (3.13-24), Lakṣayoga (3.25-36) and Aṣṭāṅgayoga (3.37-52). These subcategories will be only briefly characterised in this chapter. They are then discussed in detail in the respective chapter according to the order of the list of the fifteen yogas of the \textit{Yogatattvabindu}.\footnote{A French description of Haṭhayoga in the \textit{Sarvāṅgayogapradīpikā} can be found in \citeauthor{burger2014sarvangayogapradipika} 2014, pp. 701-709.}
+In the \textit{Sarvāṅgayogapradīpikā} (3.1-52), Haṭhayoga is both an individual category (3.1-12) and a superordinate category. In the following, Haṭhayoga is primarily discussed as the individual category. As a superordinate category, it subsumes three other Yogas, namely Rājayoga (3.13-24), Lakṣayoga (3.25-36) and Aṣṭāṅgayoga (3.37-52). These subcategories will be only briefly characterised in this chapter. They are then discussed in detail in the respective chapter according to the order of the list of the fifteen Yogas of the \textit{Yogatattvabindu}.\footnote{A French description of Haṭhayoga in the \textit{Sarvāṅgayogapradīpikā} can be found in \citeauthor{burger2014sarvangayogapradipika} 2014, pp. 701-709.}
 
 Sundardās initially locates Haṭhayoga within the Āditnātha tradition and specifies the union of sun and moon as its definition.\footnote{\citetitle{sarvangayoga} 3.1: \textit{abahi hahūṃ haṭhayoga sunāī} | \textit{ādinātha ke bandaiṃ pāī} | \textit{ravi śaśi doū eka milāvai} | \textit{yāhī teṃ haṭhayoga kahāvai} || 1 ||}
 
@@ -619,11 +619,74 @@ This is followed by describing the ideal environment for Yoga practice, short pr
 
 The ideal environment for Haṭhayoga is in a well-governed country where justice prevails. Here, the yogin is supposed to build a hut (\textit{maṭhikā}) with a small door and no holes. The yogin shall smear the hut with cow dung for this purpose. A small well is dug into the ground next to the hut.\footnote{Ibid. 3.2-3ab: \textit{prathama sudharma deśa kahuṃ tākai} | \textit{bhalau rājya kachu deṣala na jākai} | \textit{tāhāṃ jāī kai maṭhikā karī} | \textit{alpa dvāra aru chidra su bharaī} || 2 || \textit{lipta karai cahūṃ ora sugandhā} | \textit{kūpa sahita maṭha ihīṃ bidhi baṃdhā} |}\footnote{Cf. \citetitle{hathapradipika2024} 1.12-13.}
 
-The yogin is supposed to sit in the hut, devote himself to Haṭhayoga and regulate the breath.\footnote{Ibid. 3.3cd: \textit{tāmahiṃ paiṭhi karai abhyāsā | gutu gami haṭha kari jātai svāsā} || 3 ||} Accordingly, for Sundardās, as in all texts with complex yoga taxonomies without exception, breath cultivation is the central element of Haṭhayoga. In the following, he specifies the practice of Yoga postures (\textit{āsana}).\footnote{Ibid. 3.5ab: \textit{haṭhi kari āsana sādhaiṃ bhāī} \textit{hatha kari nidrā tajatau jāīī} |}. Furthermore, Sundardās recommends ritual washing and god worship in the morning.\footnote{Ibid. 3.7b: \textit{prāta sanāna upāsana koī} | What this might have looked like is described in great detail within the first chapter of the \textit{Yogakarṇikā}.} The diet is supposed to be regulated.\footnote{Ibid. 3.5c: \textit{haṭha hī kari āhāra ghaṭāvai} |} For Sundardās, this means avoiding hot, spicy and sour foods. Mustard, sesame, alcohol, meat, green vegetables, ginger and garlic, shall be avoided.\footnote{Ibid. 3.6: \textit{haṭha kari tīkṣaṇa kaṭuka sutyāgai} | \textit{sarasoṃ tila mada māṃsa na māṃgai} | \textit{harita śāka kabahū nahiṃ ṣaī} | \textit{hiṃgu lasanu saba deśa bahāī} || 6 ||}. A diet of rice, milk,\footnote{Ibid. 3.7c: \textit{gohūṃ śāli su karai ahārā} |} ghee, honey and gourd vegetables is recommenced. Furthermore, clear water is supposed to be ingested.\footnote{Ibid. 3.8ab: \textit{ṣīra ṣāṃḍa ghṛta madhi puni sāṃnī} \textit{sūṃṭhi paṭola nirmala ati pāṃnī} |} When the Haṭhayogin eats in this way, his body is freed from disease.\footnote{Ibid. 3.8cd: \textit{yahu bhojana su karai haṭha yogī} \textit{dina dina kāyā hoī nirogī} || 8 ||}
+The yogin is supposed to sit in the hut, devote himself to Haṭhayoga and regulate the breath.\footnote{Ibid. 3.3cd: \textit{tāmahiṃ paiṭhi karai abhyāsā | gutu gami haṭha kari jātai svāsā} || 3 ||} Accordingly, for Sundardās, as in all texts with complex Yoga taxonomies without exception, breath cultivation is the central element of Haṭhayoga. In the following, he specifies the practice of Yoga postures (\textit{āsana}).\footnote{Ibid. 3.5ab: \textit{haṭhi kari āsana sādhaiṃ bhāī} \textit{hatha kari nidrā tajatau jāīī} |}. Furthermore, Sundardās recommends ritual washing and god worship in the morning.\footnote{Ibid. 3.7b: \textit{prāta sanāna upāsana koī} | What this might have looked like is described in great detail within the first chapter of the \textit{Yogakarṇikā}.} The diet is supposed to be regulated.\footnote{Ibid. 3.5c: \textit{haṭha hī kari āhāra ghaṭāvai} |} For Sundardās, this means avoiding hot, spicy and sour foods. Specifically mustard, sesame, alcohol, meat, green vegetables, ginger and garlic, shall be avoided, too.\footnote{Ibid. 3.6: \textit{haṭha kari tīkṣaṇa kaṭuka sutyāgai} | \textit{sarasoṃ tila mada māṃsa na māṃgai} | \textit{harita śāka kabahū nahiṃ ṣaī} | \textit{hiṃgu lasanu saba deśa bahāī} || 6 ||}. A diet of rice, milk,\footnote{Ibid. 3.7c: \textit{gohūṃ śāli su karai ahārā} |} ghee, honey and gourd vegetables is recommenced. Furthermore, clear water is supposed to be ingested.\footnote{Ibid. 3.8ab: \textit{ṣīra ṣāṃḍa ghṛta madhi puni sāṃnī} \textit{sūṃṭhi paṭola nirmala ati pāṃnī} |} When the Haṭhayogin eats in this way, his body is freed from disease.\footnote{Ibid. 3.8cd: \textit{yahu bhojana su karai haṭha yogī} \textit{dina dina kāyā hoī nirogī} || 8 ||}
 
-Verses 3.9-11 mention the six actions (\textit{ṣaṭkarma}s) - \textit{dhauti}, \textit{basti}, \textit{netī}, \textit{trāṭaka}, \textit{naulī} and \textit{kapālabhātī}. They are used to purify the channels,\footnote{Ibid. 3.9b: \textit{nāḍī śuddha hoṃhi mala ṭalai} |} and lead to success.\footnote{Ibid. 3.10c: \textit{ye ṣaṭa karma siddhi ke dātā} |} In the last verse of this section, we learn that the power of Haṭhayoga leads to bliss.\footnote{Ibid. 3.12a: \textit{yā haṭha yoga prabhāva teṃ, pragaṭa hoī ānanda} |}
+Verses 3.9-11 mention the six actions (\textit{ṣaṭkarma}s) - \textit{dhauti}, \textit{basti}, \textit{netī}, \textit{trāṭaka}, \textit{naulī} and \textit{kapālabhātī}. They are supposed to to purify the channels,\footnote{Ibid. 3.9b: \textit{nāḍī śuddha hoṃhi mala ṭalai} |} and lead to success.\footnote{Ibid. 3.10c: \textit{ye ṣaṭa karma siddhi ke dātā} |} In the last verse of this section, we learn that the power of Haṭhayoga leads to bliss.\footnote{Ibid. 3.12a: \textit{yā haṭha yoga prabhāva teṃ, pragaṭa hoī ānanda} |}
 
 As already mentioned at the beginning, Sundardās also subsumes Rājayoga (3.13-24), Lakṣayoga (3.25-36) and Aṣṭāṅgayoga (3.37-52) under the superordinate category Haṭhayoga. Sundardā's Rājayoga practice is for him what is commonly known as \textit{vajrolīmudrā}\footnote{The verses do not specify the term, but the practice is identical}. Lakṣayoga, a practice found in all complex late medieval taxonomies, is the fixation of the gaze (\textit{dṛṣṭi}) on differently located points or objects inside or outside the body. In the context of Aṣṭāṅgayoga, the generally known eight limbs are then discussed individually. Similar to Nārāyaṇatīrtha, characteristic practices of Haṭhyoga such as \textit{āsana}s, \textit{kumbhaka}s, \textit{murdā}s and \textit{bandha}s are assigned to the individual limbs. A detailed comparative discussion of the subcategories takes place in the following chapters.
+
+\section{5. Karmayoga}
+\label{hathayogaintro}
+
+Der Begriff Karmayoga, ist im formellen Diskurs vor allem aus der \citetitle{kaushik1993}\footnote{Cf. for example \citetitle{kaushik1993} 2.47-49, 3.1-7, \& 4.20. Hier ist Karmayoga ein Weg (\textit{marga}) zu Befreiung (\textit{mokṣa}) durch Handeln ohne Anhaftung an sein Taten.} bekannt. In den vier komplexen spätmittelalterlichen Taxonomien der 12-15 Yogas taucht er im \textit{Yogatattvabindu} an fünfter Stelle, in der \textit{Yogasvarodaya} und \textit{Yogasiddhāntacandrikā} an dritter Stelle auf. In der \textit{Sarvāṅgayogapradīpikā} ist Karmayoga nicht genannt. Karmayoga erscheint folglich nur innerhalb der Taxonomien mit 15 Yogas.  
+
+\subsection{Karmayoga in the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}}
+
+In beiden Texten fällt der Begriff Karmayoga trotz seiner Nennung in den Eingangs präsentierten Listen nicht mehr. Diese Abwesenheit überrascht den Leser, da die Struktur des Textes, beginnend mit einer Liste und dann der Behandlung einzelner Yogas, die Erwartung weckt, dass alle in der Liste genannten Subtypen des Yoga behandelt werden. Besonders bemerkenswert ist, dass Kriyāyoga, als erster Eintrag in der Liste, auch als erster abgehandelt wird, und die folgenden Abschnitte des Textes weitgehend der Reihenfolge der Liste entsprechen, sodass diese Erwartung bestärkt wird. Diese erwartete Struktur verliert sich jedoch im Laufe des Textes immer weiter. Hieraus ergeben sich zwei Erklärungsmodelle. Entweder diente die Liste lediglich der Illustration der Vielfalt der verschiedenen Kategorien des Yoga und es bestand niemals die Absicht der Autoren alle Yogas abzuhandeln, oder die Überlieferung des Textes ist der Verderbnis anheimgefallen. Die Analyse der Texte verdeutlichte, dass Rāmacandra zumindest die erste Hälfte und ebenfalls große Teile der zweiten Hälfte des Textes auf der \textit{Yogasvarodaya} basiert\footnote{In der zweiten Hälfte seines Textes verwendet Rāmacandra zusätzlich häufig Inhalte und Verse aus der \citetitle{ssplonavla}.} und fast ausnahmslos der Struktur folgt, wie sie aus den Zitaten des \textit{Yogasvarodaya} in der \textit{Prāṇatoṣinī} vorgegeben ist. Wir wissen aber auch, dass die Überlieferung der \textit{Prāṇatoṣinī} keineswegs vollständig ist. Viele der Verse des \textit{Yogasvarodaya}, die sich in der \textit{Prāṇatoṣinī} finden, können auch in der \textit{Yogakarṇikā} nachgewiesen werden. Darüber hinaus beinhaltet die \textit{Yogakarṇikā} eine nicht zu vernachlässigende Menge an Versen, die sich nicht im \textit{Prāṇatoṣinī} finden, aber dennoch dem \textit{Yogasvarodaya} zugeschrieben werden.\footnote{Überraschenderweise sind die Inhalte der Verse des \textit{Yogasvarodaya} in der \textit{Yogakarṇikā} auch nicht \textit{Yogatattvabindu} nachweisbar. Bedeutet dies das das \textit{Yogatattvabindu} die Zitate der \textit{Prāṇatoṣinī} als Vorlage nutzte? Dies ist unmöglich, da die \textit{Prāṇatoṣinī} aus dem 19. Jh. stammt. Wahrscheinlich gab es mehrere Rezensionen des \textit{Yogasvarodaya}.} Daraus ergibt sich, dass die Überlieferung der \textit{Yogasvarodaya} nur anhand der Verse der \textit{Prāṇatoṣinī} und der \textit{Yogakarṇikā} unmöglich vollständig sein kann und der ursprüngliche Text möglicherweise auch die nicht in den Zitaten erwähnten anderen fünfzehn Yogas beschrieb. Die strukturelle Analyse beider Texte offenbart im Kontext von Karmayoga einen gewichtigen Hinweis auf Verderbnis in der Überlieferung.
+
+Dieser Hinweis findet sich in Sektion \uproman{41}. Die Sektion beschäftigt sich, genau wie die vorangehenden Sektionen beginnend mit \uproman{32} mit den mikrokosmischen Equivalenten des Makrokosmos im yogischen Körper. Hier geht es insbesondere um die Auflistung diverser Inhalte des yogischen Körpers wie siebenundzwanzig Sterne, zwölf Tierkreiszeichen, neun Planeten, die fluktuation der Ūrmi, welche den Körper in Bewegung setzt, unzählige Gottheiten die den Poren der Arme innewohnen, himmlische Askten (\textit{divyatapasvin}s) in den Poren des Rückens, usw.
+
+Dann wechselt das Thema abrupt. Sowohl im \textit{Yogatattvabindu} als auch in der \textit{Yogasvarodaya} findet sich plötzlich eine Passage die \textit{mukti} durch \textit{karma} beschreibt, ohne eine entsprechende vorangehende Einleitung. Rāmacandra, prosaisiert offenbar, wie so oft, einfach die Inhalte der \textit{Yogasvarodaya}. Das strukturelle Problem des Textes geht daher auf das \textit{Yogasvarodaya} zurück. Der inhaltliche Wechsel ist so aprupt, dass offenbar eines oder mehrere Folios des Exemplars eines Archetypen auf dem der noch erhaltene Text letztendlich basierte, verloren gegangen sein könnten. Bei diesem Textabschnitt, welches die Sektion \uproman{41} beschließt, könnte es sich, durch den abrupten Themenwechsel, durchaus um Teile einer ursprünglich vorhandenen Beschreibung von Karmayoga handeln. \\
+
+Das \textit{Yogasvarodaya} (PT, Ed. p. 843-44) liest:
+
+\begin{quote}
+  \textit{samagradarśanān muktaḥ svargabhogañ ca matsukham} | \\
+  \textit{tad etac cintayā yāti rogaśokavivarjjitaḥ} ||\\
+  \textit{yat karmā karmaṇā śaṅkā manomadhye bhaved vahiḥ} |\\
+  \textit{tat karmākaraṇaṃ}\footnote{\textit{karmākaraṇaṃ} em.] \textit{karmakaraṇaṃ} YSv (PT).} \textit{muktir ity āha bhagavān śivaḥ} |
+\end{quote}
+\begin{quote}
+  As a result of complete vision\footnote{It seems very unlikely to me that this \textit{samagradarśanāt} refers back to the previously mentioned microcosmic contents of the macrocosm. Esspecially given the following statements about \textit{karma}. To what it refers to is unclear.} one is liberated from heavenly pleasures and happiness. By means of contemplating that one reaches freedom from sorrow and disease. Whatever action creates concern within the mind by [considering] the action,\\
+  externally the non-execution of that [very] action brings about liberation. Thus says the exalted Śiva.
+\end{quote}
+
+Die Prosaisierung dieser Passage im \textit{Yogatattvabindu} lautet:
+
+\begin{quote}
+  \textit{puruṣasya nṛtyadarśanāt} || \textit{gītaśravaṇāt} || \textit{vallabhavastuno darśaṇāt} || \textit{ya ānanda utpadyate saḥ svargalokaḥ kathyate} | \textit{rogapīḍito durjanebhyaḥ puruṣasya yad duḥkhaṃ utpadyate} | \textit{tad bahutaraṃ narakaṃ kathyate} | \textit{atha ca yatkarmakaraṇāt sarveṣāṃ lokānāṃ svamanasi ca śubhaṃ na bharete tat karma bandhanam ity ucyate} | \textit{atha ca yatkarmakaraṇān manomadhye śaṅkā na bhavati tatkarma muktikāraṇam} | 
+\end{quote}
+\begin{quote}
+Whatsover bliss is generated as a result of witnessing dance, listening to songs, [and] viewing beloved objects, that is called heaven. The suffering which arises for a person afflicted by disease or by bad persons is considered a very great hell. Moreover, as a result of performing actions that do not bring about happiness in all worlds and in one’s own mind, is it said that this [very] action is binding. Furthermore, from whatever action within the mind concern does not arises, that action becomes the cause for liberation.
+  \end{quote}
+
+Eine Extrapolation des vollständigen Konzeptes anhand dieses hyptothetischen Überbleibsels eines Karmayoga ist unmöglich. Klar ist jedoch, dass hier, auch wenn es nicht Karmayoga genannt wird, ein Weg zur Befreiung durch spezifische Handlungen (\textit{karma}s) dargelegt wird. In der \textit{Yogasvarodaya} sind dies alle Handlungen, welche keine Sorgen bereiten. Im \textit{Yogatattvabindu} scheint dies die Kultivierungen aller Handlungen zu sein, die einen glücklich machen und der Verzicht auf Handlungen, welche zu Sorgen führen. Gleichzeitig ist diese Passage ein erneuter Hinweis auf Rāmacandra's wohlhabendes und genußorientiertes Publikum. Es lässt sich weiterhin eine radikaler Kontrast zum ``klassischen'' Karmyoga der \citetitle{kaushik1993} verzeichnen. Nicht mehr die Nicht-Anhanfung an die Handlung steht im Vordergrund, sondern Handlungen die zu Glück führen. 
+
+\subsection{Karmayoga in the \textit{Yogasiddhāntacandrikā}}
+
+Nārāyaṇatīrtha situiert sein Karmayoga im Kontext seines Kommentares zu \textit{sūtra} 2.28:
+
+\begin{quote}
+  \textit{yogāṅgānuṣṭhānād aśuddhikṣaye jñānadīptir āvivekakhyāteḥ} || 28 ||
+\end{quote}
+\begin{quote}
+As a result of the practice of the limbs of Yoga upon the destruction of impurities, the lamp of knowledge up to the realisation of discrimination arises. 
+\end{quote}
+
+Dieses \textit{sūtra} leitet eine Beschreibung der acht berühmten Glieder des Pātañjalayoga ein. Nārāyaṇatīrtha erklärt hierzu, dass die Praxis der acht Glieder zur Realisierung des übergeordneten Ziels des Yoga, der unterscheidenen Erkenntnis zwischen \textit{puruṣa} und \textit{prakṛti} führt, die Unwissenheit (\textit{vidyā}) hierdurch entfernt wird und sich hierdurch Befreiung manifestiert. 
+
+Karmayoga wird im Folgenden als Alternative dargestellt:
+
+\begin{quote}
+\textit{athavā yogāṅgānāṃ dhautīvastītyādiṣaṭkarmaṇāṃ mahāmudrādīnāṃ ca anuṣṭhānād dṛḍhābhyāsāj jñānadīptiḥ। jñāyate'neneti jñānaṃ karaṇavargaḥ} | \textit{tasya dīptiḥ rogādyanabhighātena tejasvitā dṛḍhatā ca, āvivekakhyāteḥ vivekakhyātiparyantaṃ bhavatīty arthaḥ} | \textit{rogādinā jñānasya kuṇṭhabhāvas tu prasiddha eva। sa caiteṣv aṅgeṣv anuṣṭhiteṣu rogapratibandhān na bhavatīty arthaḥ} | \textit{tathā ca karaṇadārḍhyadvārā samādhidārḍhyārthārthakarmayogo 'pi prathamato 'nuṣṭheyo rogabhīruṇeti bhāvaḥ} | \textit{sa ca karmayogaḥ ṣaṭkarmarūpo mudrārūpaś ceti dvividho nirūpita ākare yathā |} 
+\end{quote}
+\begin{quote}
+Alternatively, through the execution of the consistent practice of the limbs of yoga being the six acitions like dhautī vastī etc. and mahāmudrā etc. the lamp of knowledge arises. By this \textit{j~nāna} (knowledge), the group of sense organs is meant. Its \textit{dīpti}(lamp) through the absense of damage by diseases etc. becomes brilliant and strong. The meaning of \textit{āvivekakhyāteḥ} (up to realisation of discrimination) is extending as far as the realisation of discrimination. The meaning is - by diseases etc. the state of inefficiency of knowledge (here, the sense organs) is well known. And after having practiced these limbs, obstacles from diseases do not arises anymore. And thus, the means for aquiring resilience of the sense organs is Karmayoga for the purpose of steadfastness of Samādhi, which shall be practiced first particularly with regard to the state of being afraid of disease. And this Karmayoga, in form of the six actions and in form of the seals was discussed as twofold accordingly. 
+\end{quote}
+
+
+
+
 
 \end{document}
 
