added intro until mantrayoga also did some changes to edition

--- a/bindu.bib
+++ b/bindu.bib
@@ -1053,7 +1053,7 @@ address={The Hague},
 
 @book{yogasutra,
   title={Pātañjalayogaśāstra},
-  subtitle={Yoga Philosophy of Patañjali},
+  subtitle={Yoga Pahilosophy of Patañjali},
   author={Hariharānanda Āraṇya},
   editor={Mukerji, P.N.},
   year={1983},
@@ -2089,9 +2089,8 @@ keywords={printsource},
    keywords={printsource},
  }
 
-@book{shivayogapradipika,
-   title={Śivayogapradīpikā},
-   subtitle={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
+@book{shivayogapradipikax,
+   title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
    editor={Powell, Seth David},   
    year={2023},
    note={Dissertation as submitted on April 2023}, 
@@ -2099,6 +2098,16 @@ keywords={printsource},
    address={Cambridge, Massachusetts},
    keywords={printsource},
  }
+
+@book{shivayogapradipika,
+   title={Śivayogapradīpikā},
+   note={See A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
+   pages={268-313}, 
+   keywords={printsource},
+}
+
+
+ title={Śivayogapradīpikā},
 
 @Misc{shivasam,
    note={Śivasaṃhita: \cite{mallinson2007}},
